--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: [Design and Analysis of Experiments for Simulation]
-description: [As of 01 April 2020]
+title: DOE
+description: Resources for simulationists
