--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Design of Experiments
-description: Resources for simulationists
+description: Training and Resources for Simulationists
