--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Design of Experiments
 description: Training and Resources for Simulationists
+logo: 20190425_TRAC_Logo.png
