--- a/workflows/workflow.yml
+++ b/workflows/workflow.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@master
     - uses: jfking50/doe-site@master
       with:
-        args: --acl public-read --follow-symlinks
+        args: --acl public-read --follow-symlinks --exclude '.git/*'
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
