--- a/.github/workflows/s3sync.yml
+++ b/.github/workflows/s3sync.yml
@@ -12,10 +12,9 @@ jobs:
      - uses: actions/checkout@v2
      - uses: jakejarvis/s3-sync-action@v0.5.1
        with:
-        args: --acl public-read --follow-symlinks
+        args: --acl public-read --follow-symlinks --exclude '.git/*'
        env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'us-gov-west-1'
-        SOURCE_DIR: '/index.html'
